# binaryclock-plugin

./: CMakeLists.txt  README.md  make.py
cmake/: binaryclock-menu-plugin.desktop  globals.h.cmake
debian/: changelog  control  copyright  dirs  postinst  prerm  rules
src/: widget.c  widget.h
src/usr/share/applications/hildon-status-menu/: binaryclock_status_area_plugin.desktop
trunk/src/usr/lib/hildon-desktop/: binaryclock_status_area_plugin.py
